--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             
             <!-- Header Section -->
             <div class="text-center border-b pb-4 mb-6">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Simplificador Algebraico</h1>
-                <p class="text-gray-600 mt-2">Soy tu experto en matemáticas. Ingresa una expresión para comenzar.</p>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800">SimpleXAlg: Simplificador Algebraico</h1>
+                <p class="text-gray-600 mt-2">Soy tu experto en matemáticas. Ingresa una expresión válida para comenzar.</p>
             </div>
     
             <!-- Input Section -->
